--- a/.pkgr.yaml
+++ b/.pkgr.yaml
@@ -2,7 +2,4 @@ dependencies:
   - default-dependency-1
   - default-dependency-2
 before:
- - go get -u github.com/odeke-em/drive/cmd/drive
- - cd $GOPATH/src/github.com/odeke-em/drive/drive-gen && godep save
- - cd $GOPATH/src/github.com/odeke-em/drive/drive-gen && godep restore
-
+ - go get -u -v github.com/odeke-em/drive/drive-gen && drive-gen drive-google 
