--- a/.pkgr.yaml
+++ b/.pkgr.yaml
@@ -2,4 +2,5 @@ dependencies:
   - default-dependency-1
   - default-dependency-2
 before:
- - go get -u -v github.com/odeke-em/drive/drive-gen && drive-gen drive-google 
+ - cd $GOPATH/src/github.com/odeke-em/drive/drive-gen && godep save
+ - cd $GOPATH/src/github.com/odeke-em/drive/drive-gen && godep restore
