--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ go:
   - 1.8
   - 1.9
   - tip
+before_install:
+  - go get -u github.com/golang/dep/cmd/dep
 install:
+  - dep ensure
   - go get -t ./...
 script:
   go test -v -race -cover ./src/...
