--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ go:
   - 1.9
   - tip
 before_install:
-  - go get -u github.com/golang/dep/cmd/dep
+  - go get -v -u github.com/golang/dep/cmd/dep
 install:
-  - dep ensure
-  - go get -t ./...
+  - dep ensure -v
+  - go build -o ./bin/drive-google -v ./drive-google
+  - go build -o ./bin/drive-gen -v ./drive-gen
 script:
   go test -v -race -cover ./src/...
